Created a getAllDeliveries function and getAllDeliveriesMethods

--- a/frontend/src/app/admin/admin-panel/admin-dashboard/delivery-method/create-form-delivery-method/create-form-delivery-method.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/delivery-method/create-form-delivery-method/create-form-delivery-method.component.html
@@ -27,4 +27,6 @@
   </div>
 
   <button type="submit" [disabled]="form.invalid">Create</button>
+  <div *ngIf="isCreated" class="success-message">Delivery method created successfully!</div>
+  <div *ngIf="isNotCreated" class="error-message">Failed to create delivery method.</div>
 </form>
