Show all users implementation added

--- a/frontend/src/app/admin/admin-panel/users/users-details/users-details.component.html
+++ b/frontend/src/app/admin/admin-panel/users/users-details/users-details.component.html
@@ -60,3 +60,24 @@
 
 <p *ngIf="isCreated">User created successfully!</p>
 <p *ngIf="isNotCreated">User creation failed!</p>
+
+<button class="show-users-btn" (click)="showAllUsers()">Show All Users</button>
+
+<table *ngIf="showUsers" class="users-table">
+    <thead>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Role</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let user of user">
+            <td>{{ user.firstName }}</td>
+            <td>{{ user.lastName }}</td>
+            <td>{{ user.email }}</td>
+            <td>{{ getRoleName(user.roleId) }}</td>
+        </tr>
+    </tbody>
+</table>
