--- a/frontend/src/app/admin/admin-panel/sidebar/sidebar.component.html
+++ b/frontend/src/app/admin/admin-panel/sidebar/sidebar.component.html
@@ -4,5 +4,6 @@
     <li><a routerLink="/admin">Dashboard</a></li>
     <li><a routerLink="/admin/currency">Currency</a></li>
     <li><a routerLink="/admin/users-access-control">Users Access Control</a></li>
+    <li><a routerLink="/admin/orders/details">Orders</a></li>
   </ul>
 </div>
