added implementation for creating product

--- a/frontend/src/app/admin/admin-panel/sidebar/sidebar.component.html
+++ b/frontend/src/app/admin/admin-panel/sidebar/sidebar.component.html
@@ -8,5 +8,6 @@
     <li><a routerLink="/admin/delivery/create">Delivery</a></li>
     <li><a routerLink="/admin/delivery-method/create">Delivery Method</a></li>
     <li><a routerLink="/admin/orders/details">Orders</a></li>
+    <li><a routerLink="/admin/products">Products</a></li>
   </ul>
 </div>
