Home page improve design

--- a/frontend/src/app/core/components/footer/footer-copyright/footer-copyright.component.html
+++ b/frontend/src/app/core/components/footer/footer-copyright/footer-copyright.component.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="container">
     <div class="site-footer__content">
-      <p class="site-footer__legend">Site Name &copy; 2023</p>
+      <p class="site-footer__legend">Gjirafa50&copy; 2023</p>
     </div>
   </div>
 </footer>
