--- a/frontend/src/app/core/components/header/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/header/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header class="navbar">
   <div class="navbar__left">
-    <a routerLink="">
-      <h1 class="navbar__title">Website Title</h1>
+    <a routerLink="" class="navbar__title_a">
+      <h1 class="navbar__title">Gjirafa50</h1>
     </a>
   </div>
   <div class="navbar__middle">
