--- a/frontend/src/app/user/home/product-carousel/slideshow-carousel/slideshow-carousel.component.scss
+++ b/frontend/src/app/user/home/product-carousel/slideshow-carousel/slideshow-carousel.component.scss
@@ -1,6 +1,6 @@
 .image-container {
-  height: 400px;
-  background-image: url('../../../../../assets/radix1.jpg');
+  height: 270px;
+  background-image: url('../../../../../assets/gjirafa-pic.png');
   background-size: cover;
   background-position: center;
   display: flex;
