--- a/frontend/src/app/core/components/header/navbar/navbar.component.scss
+++ b/frontend/src/app/core/components/header/navbar/navbar.component.scss
@@ -3,7 +3,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  background-color: #eee;
 
   &__left {
     flex: 1;
@@ -86,4 +85,8 @@
   justify-content: flex-end;
   align-items: center;
   gap: 5px;
+}
+.navbar__title_a {
+  text-decoration: none;
+  color: #f36b5a;
 }
