--- a/frontend/src/app/user/home/product-carousel/side-image-carousel/side-image-carousel-item/side-image-carousel-item.component.html
+++ b/frontend/src/app/user/home/product-carousel/side-image-carousel/side-image-carousel-item/side-image-carousel-item.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="image">
-    <img src="../../../../../../assets/radix1.jpg" alt="placeholder">
+    <img src="../../../../../../assets/gjirafa-pic.png" alt="placeholder">
     <div class="overlay">
       <h2>Title</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel felis euismod, molestie nisi vitae, vestibulum
